semantic updates made

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <image href="#search-engine-optimization">Search Engine Optimization</image>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <image href="#online-reputation-management">Online Reputation Management</image>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <image href="#social-media-marketing">Social Media Marketing</image>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
+        </nav>
+    </header>
+    <div class="BkgrdImg"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
